public/assets/css/Trainer/mobileInnerstyle.css
/* ... */
h3 {
  font-size: 1.25em;
  color: #727272; }

h4 {
  font-size: 1em;
  color: #727272; }

h5 {
  font-size: 0.8em;
  color: #727272; }

label {
  font-size: 14px;
  color: #FFF;
  line-height: 19px;
  padding: 0 0 4px 0; }

input, .popup_container .share_content textarea {
  height: auto;
  border: 1px solid #EFEFEF;
  border-radius: 4px;
  width: 100%;
  padding: 9px 40px 9px 9px;
  margin-bottom: 15px;
  /* text-align: center; */
  background: transparent;
 }
 /* .dataTables_filter label input{
  appearance: none;
  -webkit-appearance: none;
 } */

caption {
  display: none; }

/*****   Data Table for exercise  *******/
table {
  width: 100%; }

th,
td {
  text-align: center;
  padding: 6px 0;
  border-bottom: 1px #fff solid;
  border-right: 1px #fff solid; }
  @media (min-width: 450px) {
    th,
    td {
      padding: 8px 0; } }

thead th {
  font-size: 12px;
  color: #FFFFFF;
  line-height: 16px;
  font-weight: lighter;
  padding: 5px 4px; }
  @media (min-width: 450px) {
    thead th {
      padding: 8px 0;
      font-size: 1em; } }

thead tr th:last-child {
  border-right: none; }

tbody tr td:last-child {
  border-right: none; }

tbody tr:last-child th,
tbody tr:last-child td {
  border-bottom: none; }

tbody {
  background-color: #F2F1F5; }

tbody th,
tbody td {
  font-weight: 600;
  font-size: 13px;
  color: #2C3E50;
  line-height: 18px; }

tbody th span,
tbody td span {
  font-weight: lighter;
  font-size: 12px;
  color: #2C3E50;
  line-height: 18px; }

td.restBtwSet {
  font-size: 12px;
  color: #369AD8;
  line-height: 17px;
  padding: 2px 0;
  background: #fff; }

.fltright {
  float: right; }
  .fltright .edit-btn-section{
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    justify-content: center;
  }
  .fltright .edit-btn-section .cancel-bluebtn{
    background-color: #FFFFFF;
    color: #0b97c4;
  }

.overlayStyle, #lightBoxLoading, .overlay, .leftOverBound, .exerciseOverlay {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  position: fixed;
  min-height: 100vh;
  background-color: rgba(44, 62, 80, 0.85);
  z-index: 1000;
  overflow-y: scroll; }

.exitOverlay {
  position: absolute;
  top: 2rem;
  right: 2rem;
  padding: 10px;
  z-index: 5000; }

.overlayKillParent {
  display: none; }
  .overlayKillParent-active {
    display: -webkit-box;
    display: -moz-box;
    display: box;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -moz-box-pack: center;
    box-pack: center;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    -o-justify-content: center;
    justify-content: center;
    -ms-flex-pack: center;
    -webkit-box-align: center;
    -moz-box-align: center;
    box-align: center;
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    -o-align-items: center;
    align-items: center;
    -ms-flex-align: center; }

.overlayKillChild, .pop-kill {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100vw;
  background: transparent;
  z-index: 1002; }

.overlayKillContent, #calendar_performance {
  z-index: 1500; }

#lightBoxLoading {
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 10000; }
  #lightBoxLoading img {
    margin: auto auto;
    width: 150px; }

/*  =====================     Wrappers      =============================
========================================================================*/
.o-wrapper {
  padding-top: 70px; }

.no_padding {
  padding-top: 0; }

.wrapper {
  max-width: 1150px;
  padding: 0 5px; }

@media all and (min-width: 400px) {
  .wrapper {
    padding: 0 10px; } }
@media all and (min-width: 1040px) {
  .wrapper {
    margin: auto;
    max-width: 1150px; } }
.widget {
  background-color: #fff;
  border-radius: 2px;
  padding: 20px 10px 20px 10px;
  margin-top: 20px;
  margin-bottom: 20px; }

@media all and (min-width: 400px) {
  .widget {
    padding: 30px 20px 20px 20px; } }
/*  =====================     Buttons      =============================
========================================================================*/
.moreOptionsButton {
  background: #F2F2F2;
  border-radius: 2px;
  border: none;
  text-align: center;
  display: inline-block;
  min-width: 50px;
  height: 30px;
  padding: 5px 6px;
  color: #fff;
  font-size: 1em;
  cursor: pointer;
  -webkit-transition: all 0.1s ease-out;
  -moz-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  box-shadow: 0 3px 0 0 #cccccc;
  text-align: center;
  margin-right: 10px;
  cursor: pointer;
  margin-top: auto;
  margin-bottom: 0;
  display: none; }
  .moreOptionsButton:active {
    box-shadow: 0 1px 0 0 #cccccc; }
  .moreOptionsButton:active {
    -webkit-transform: translateY(2px);
    -moz-transform: translateY(2px);
    -ms-transform: translateY(2px);
    -o-transform: translateY(2px);
    transform: translateY(2px); }
  .moreOptionsButton svg {
    height: 20px;
    margin: auto;
    width: auto; }

.addElementButton {
  background: #369AD8;
  border-radius: 2px;
  border: none;
  text-align: center;
  display: inline-block;
  min-width: auto;
  height: 40px;
  padding: 12px 16px;
  color: #fff;
  font-size: 1em;
  cursor: pointer;
  -webkit-transition: all 0.1s ease-out;
  -moz-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  box-shadow: 0 3px 0 0 #1f70a2;
  margin: auto;
  min-width: 185px; }
  .addElementButton:active {
    box-shadow: 0 1px 0 0 #1f70a2; }
  .addElementButton:active {
    -webkit-transform: translateY(2px);
    -moz-transform: translateY(2px);
    -ms-transform: translateY(2px);
    -o-transform: translateY(2px);
    transform: translateY(2px); }
/* ... */

